Remove default pylint when using jedi (#16074)
* Remove default pylint when using jedi

* Remove pylint minimal checkers

* Remove more pylint config

* Restore missed configuration file names

* More linting clean up

* Fix tests

--- a/package.json
+++ b/package.json
@@ -1661,7 +1661,7 @@
                 },
                 "python.linting.pylintEnabled": {
                     "type": "boolean",
-                    "default": true,
+                    "default": false,
                     "description": "Whether to lint Python files using pylint.",
                     "scope": "resource"
                 },
@@ -1669,12 +1669,6 @@
                     "type": "string",
                     "default": "pylint",
                     "description": "Path to Pylint, you can use a custom version of pylint by modifying this setting to include the full path.",
-                    "scope": "resource"
-                },
-                "python.linting.pylintUseMinimalCheckers": {
-                    "type": "boolean",
-                    "default": true,
-                    "description": "Whether to run Pylint with minimal set of rules.",
                     "scope": "resource"
                 },
                 "python.pythonPath": {
